<resources>
    <string name="app_name">Fast Draw</string>
    <string name="default_category">UNMOVED</string>
    <string name="default_shortcut_category">SHORTCUTS</string>
    <string name="new_category">New category</string>
    <string name="create">Create</string>
    <string name="rename_category">Rename category</string>
    <string name="rename">Rename</string>
    <string name="app_info">App info</string>
    <string name="select_wallpaper">Change wallpaper</string>
    <string name="add_shortcut">Add a shortcut</string>
    <string name="remove_shortcut">Remove shortcut</string>

    <string name="action_wallpaper">Change wallpaper</string>
    <string name="action_shortcut">Add a shortcut</string>
    <string name="action_widget">Change widget</string>
    <string name="action_rename_category">Rename current category</string>
    <string name="action_settings">Open preferences</string>
    <string name="action_notifications">Open notifications drawer</string>

    <string name="no_app">App not installed</string>
    <string name="no_permission">You did not give Fast Draw permission to call. You can change that in Fast Draw\'s app info.</string>
    <string name="no_intent">Fast Draw is not able to launch this app or shortcut :( Please report this problem :)</string>


    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Fast Draw Preferences</string>

    <string name="pref_header_general">General</string>
    <string-array name="pref_appItemResource_titles">
        <item>Grid</item>
        <item>Vertical list</item>
    </string-array>
    <string-array name="pref_appItemResource_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="pref_title_allowOrientation">Allow rotation</string>
    <string name="pref_description_allowOrientation">Allow changing orientation between portrait and landscape</string>
    <string name="pref_title_appItemResource">App list layout</string>
    <string name="pref_title_widgetHeight">Widget height</string>
    <string name="pref_title_headerbtm">Place tabs on bottom</string>
    <string name="pref_description_headerbtm">Place category tabs on the bottom of the screen instead of on the top</string>
    <string name="pref_title_stackFromBottom">Stack icons to the bottom</string>
    <string name="pref_description_stackFromBottom">Stack app icons so that they occupy the bottom part of the screen first</string>
    <string name="pref_title_scrollableTabs">Scrollable tabs</string>
    <string name="pref_description_scrollableTabs">If you have a lot of categories (experimental)</string>
    <string name="pref_title_hideHidden">Hide HIDDEN</string>
    <string name="pref_description_hideHidden">If there\'s a category called HIDDEN, hide it</string>

    <string name="pref_header_appearance">Appearance</string>
    <string name="pref_title_showIcons">Show icons</string>
    <string name="pref_description_showIcons">Replace certain category names with icons</string>
    <string name="pref_title_largeSingle">Enlarge single letters</string>
    <string name="pref_description_largeSingle">Enlarge single-letter category names</string>
    <string name="pref_title_headerSeparator">Show tabs separator</string>
    <string name="pref_description_headerSeparator">Display a white line between the tabs and the apps</string>
    <string name="pref_title_headerShadow">Show tabs\' shadow</string>
    <string name="pref_description_headerShadow">Display a shadow under the tabs</string>
    <string name="pref_title_headerBgColor">Normal color</string>
    <string name="pref_title_headerBgColorExpanded">Expanded color</string>
    <string name="pref_title_statusBarDarker">Darker status bar</string>
    <string name="pref_description_statusBarDarker">Darken the status bar</string>

    <string name="pref_header_gestures">Gestures</string>
    <string-array name="pref_actions_titles">
        <item>Do nothing</item>
        <item>Open actions menu</item>
        <item>@string/action_wallpaper</item>
        <item>@string/action_shortcut</item>
        <item>@string/action_rename_category</item>
        <item>@string/action_settings</item>
        <item>@string/action_notifications</item>
    </string-array>
    <string-array name="pref_actions_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="pref_title_action_longclick">Longpress action</string>
    <string name="pref_title_action_doubleclick">Double tap action</string>
    <string name="pref_title_action_pinch">Pinch action</string>
    <string name="pref_title_action_unpinch">Zoom action</string>
    <string name="pref_title_action_swipe_up_2f">Two finger swipe up action</string>
    <string name="pref_title_action_swipe_down_2f">Two finger swipe down action</string>

    <string name="pref_header_categoryorder">Order of categories</string>
    <string name="pref_title_orderreset">Order alphabetically</string>

    <string name="error_oreo_user_handle">User is locked or not running</string>
    <string name="error_oreo_activity_not_found">Activity does not exist</string>
    <string name="error_oreo_get_shortcuts">Can\'t load shortcut because Fast Draw is not the default launcher</string>
    <string name="error_oreo_shortcut_host_permission">Fast Draw doesn\'t have shortcut host permission. Make sure Fast Draw is the default launcher.</string>

    <string name="error_launch_exception">Can\'t launch item due to an unknown error. Please report this issue.</string>
    <string name="error_expand_notifications_panel">Can\'t open the notifications panel. Perhaps your Android version doesn\'t support this for third party launchers.</string>
</resources>
