<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="showIcons"
        android:title="@string/pref_title_showIcons"
        android:summary="@string/pref_description_showIcons" />

    <peterfajdiga.colorpickerhex.ColorPreference
        android:defaultValue="0x80000000"
        android:key="headerBgColor"
        android:title="@string/pref_title_headerBgColor" />
    <peterfajdiga.colorpickerhex.ColorPreference
        android:defaultValue="0xB0000000"
        android:key="headerBgColorExpanded"
        android:title="@string/pref_title_headerBgColorExpanded" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="statusBarDarker"
        android:title="@string/pref_title_statusBarDarker"
        android:summary="@string/pref_description_statusBarDarker" />

</PreferenceScreen>
