<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_appItemResource_titles"
        android:entryValues="@array/pref_appItemResource_values"
        android:key="appItemResource"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_appItemResource" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="headerbtm"
        android:title="@string/pref_title_headerbtm"
        android:summary="@string/pref_description_headerbtm" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="stackFromBottom"
        android:title="@string/pref_title_stackFromBottom"
        android:summary="@string/pref_description_stackFromBottom" />

</PreferenceScreen>
