<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <peterfajdiga.fastdraw.views.LauncherPager
        android:id="@+id/apps_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/pager_header_height" />

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_line_btm">

        <peterfajdiga.fastdraw.views.LauncherPagerHeader
            android:id="@+id/apps_pager_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/pager_header_height"
            style="@style/AppsTabLayout" />

        <LinearLayout
            android:id="@+id/category_drop_zone_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="horizontal"
            android:gravity="top">

            <TextView
                android:id="@+id/drop_zone_new_category"
                android:text="@string/new_category"
                style="@style/DropZone"/>

            <TextView
                android:id="@+id/drop_zone_app_info"
                android:text="@string/app_info"
                style="@style/DropZone"/>

            <TextView
                android:id="@+id/drop_zone_remove_shortcut"
                android:text="@string/remove_shortcut"
                style="@style/DropZone"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
