<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <peterfajdiga.fastdraw.views.NestedScrollParent
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/pager_header_height">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hello, world!"
                android:textSize="48sp"
                android:textAlignment="center"
                android:paddingVertical="120dp" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/apps_pager"
                android:layout_width="match_parent"
                android:layout_height="630dp" />
            <!-- instead of 630dp, set height programmatically -->

        </LinearLayout>

    </peterfajdiga.fastdraw.views.NestedScrollParent>

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:background="@android:color/transparent">

        <View
            android:id="@+id/header_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/category_drop_zone_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="horizontal"
            android:gravity="top">

            <TextView
                android:id="@+id/drop_zone_new_category"
                android:text="@string/new_category"
                style="@style/DropZone"/>

            <TextView
                android:id="@+id/drop_zone_app_info"
                android:text="@string/app_info"
                style="@style/DropZone"/>

            <TextView
                android:id="@+id/drop_zone_remove_shortcut"
                android:text="@string/remove_shortcut"
                style="@style/DropZone"/>
        </LinearLayout>

        <peterfajdiga.fastdraw.views.CategoryTabLayout
            android:id="@+id/tab_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/pager_header_height"
            style="@style/AppsTabLayout" />

    </LinearLayout>

</FrameLayout>
